# TestWork15

./: .dockerignore  .env.example  .gitignore  Dockerfile-celery  Dockerfile-quotes-parser  LICENSE  README.md  docker-compose.yaml  pyproject.toml
quotes-parser-api/: celery_app.py  main.py
quotes-parser-api/api/: quotes.py
quotes-parser-api/core/: mongo_db.py  settings.py
quotes-parser-api/models/: quotes.py
quotes-parser-api/parser/: quotes_parser.py
quotes-parser-api/repositories/: quotes_repository.py
quotes-parser-api/services/: quotes_service.py
quotes-parser-api/tasks/: __init__.py  quotes.py
