[tool.poetry]
name = "testwork15"
version = "0.1.0"
description = ""
authors = ["Maksim <maksim.malhinau@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.116.2"
uvicorn = "^0.35.0"
motor = "^3.7.1"
celery = "^5.5.3"
redis = "^6.4.0"
httpx = "^0.28.1"
beautifulsoup4 = "^4.13.5"
selenium = "^4.35.0"
pydantic-settings = "^2.10.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
